# actor-hash

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md
src/: CMakeLists.txt  cli.c  server.c
src/actors/: CMakeLists.txt  geohash_actor.c  geohash_actor.h  log_actor.c  log_actor.h
src/hash/: CMakeLists.txt  geohash.c  geohash.h  similarity.c  similarity.h
src/utils/: CMakeLists.txt  buffer.c  buffer.h  czmq_utils.c  czmq_utils.h  msg.h  utils.c  utils.h
tests/: CMakeLists.txt  geohash_test.cpp  utils_test.cpp
